syntax="proto3";

package grpc.image.v1;

message UploadImageRequest {
    string name = 1;
    string fileFormat = 2;
    bytes data = 3;
}

message UploadImageResponse {
    string message = 1;
    string imageId = 2;
}

message DownloadImageRequest {
    string imageId = 1;
}

message DownloadImageResponse {
    bytes data = 1;
}

service Image{
    rpc Upload(stream UploadImageRequest) returns (UploadImageResponse){}
    rpc Download(DownloadImageRequest) returns (stream DownloadImageResponse){}
}